# ithina-retail-dis

./: .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
libs/dis-audit/: CLAUDE.md  README.md  pyproject.toml
libs/dis-audit/src/dis_audit/: __init__.py  bigquery_writer.py  event.py  failure_codes.py  postgres_writer.py  schema_contract.py  stages.py  writer.py
libs/dis-audit/tests/unit/: test_errors.py  test_failure_codes.py  test_imports.py  test_model.py  test_schema_contract.py  test_seam.py  test_vocab.py
libs/dis-canonical/: CLAUDE.md  README.md  pyproject.toml
libs/dis-canonical/src/dis_canonical/: __init__.py
libs/dis-canonical/tests/integration/: test_schema_reconciliation.py
libs/dis-canonical/tests/unit/: test_models.py
libs/dis-core/: CLAUDE.md  README.md  pyproject.toml
libs/dis-core/src/dis_core/: __init__.py  bq.py  errors.py  identifiers.py  ids.py  logging.py  pubsub_names.py  timestamps.py  trace_id.py
libs/dis-core/tests/unit/: test_bq.py  test_errors.py  test_identifiers.py  test_identity_client.py  test_ids.py  test_logging.py  test_pubsub_names.py  test_pubsub_provision.py  test_timestamps.py  test_trace_id.py
libs/dis-enrichment/: CLAUDE.md  README.md  pyproject.toml
libs/dis-enrichment/src/dis_enrichment/: __init__.py  registry.py  result.py
libs/dis-enrichment/tests/unit/: test_engine.py  test_pure_imports.py  test_registry.py
libs/dis-mapping/: CLAUDE.md  README.md  pyproject.toml
libs/dis-mapping/src/dis_mapping/: __init__.py  result.py
libs/dis-mapping/tests/unit/: test_chunk_accounting.py  test_engine.py  test_ops.py  test_pure_imports.py  test_source_mapping.py
libs/dis-pii/: CLAUDE.md  README.md  pyproject.toml
libs/dis-pii/src/dis_pii/: __init__.py  detectors.py  gate.py  key_vault.py  policy.py  tokenizer.py
libs/dis-pii/tests/unit/: test_db_free.py  test_detectors.py  test_gate.py  test_seams.py
libs/dis-quarantine/: CLAUDE.md  README.md  pyproject.toml
libs/dis-quarantine/src/dis_quarantine/: __init__.py  failure_stages.py  postgres_writer.py  records.py
libs/dis-quarantine/tests/unit/: test_failure_stages.py  test_records.py  test_writer_posture.py
libs/dis-rls/: CLAUDE.md  README.md  pyproject.toml
libs/dis-rls/src/dis_rls/: __init__.py  session.py
libs/dis-rls/tests/unit/: test_session_guards.py
libs/dis-storage/: CLAUDE.md  README.md  pyproject.toml
libs/dis-storage/src/dis_storage/: __init__.py  client.py  paths.py  signed_urls.py
libs/dis-storage/tests/integration/: test_emulator_roundtrip.py
libs/dis-storage/tests/unit/: test_paths.py  test_signed_urls.py
libs/dis-testing/: CLAUDE.md  README.md  pyproject.toml
libs/dis-testing/src/dis_testing/: customer_master_db.py  errors.py  fixtures.py  identity_sync.py  jwt_verify.py  plugin.py  pubsub.py  seed.py
libs/dis-testing/tests/integration/: conftest.py  test_d100_guard.py  test_seed.py  test_smoke.py
libs/dis-testing/tests/unit/: test_customer_master_fake.py  test_fixtures.py  test_identity_service_fake.py
libs/dis-validation/: CLAUDE.md  README.md  pyproject.toml
libs/dis-validation/src/dis_validation/: __init__.py  canonical_shape.py  failure_formatter.py  provenance.py  runner.py  source_shape.py  template_types.py
libs/dis-validation/tests/unit/: test_canonical_shape.py  test_enrichment_guard.py  test_pandera_decimal_canary.py  test_provenance.py  test_pure_imports.py  test_runner_logging.py  test_source_shape.py  test_template_types.py
services/csv-ingest-worker/: CLAUDE.md  README.md  pyproject.toml
services/csv-ingest-worker/src/csv_ingest_worker/: __init__.py  audit.py  bronze.py  config.py  envelope.py  health.py  main.py  pii_gate.py  pipeline.py  preflight.py  publisher.py  subscriber.py
services/csv-ingest-worker/tests/integration/: conftest.py  test_ingest_flow.py  test_pipeline_paths.py  test_retry_dedup.py
services/csv-ingest-worker/tests/unit/: test_audit.py  test_bronze.py  test_config.py  test_envelope.py  test_health.py  test_main.py  test_pii_gate.py  test_pipeline.py  test_preflight.py  test_publisher.py  test_subscriber.py  test_trust_boundary.py
services/dis-ui-server/: .dockerignore  API_CONTRACT.md  CLAUDE.md  Dockerfile  README.md  openapi.json  pyproject.toml
services/dis-ui-server/src/dis_ui_server/: __init__.py  api.py  audit.py  config.py  db.py  errors_http.py  main.py  mapping_translation.py  mapping_validation.py  publisher.py  tier0.py  upload_stream.py
services/dis-ui-server/tests/: conftest.py
services/dis-ui-server/tests/integration/: test_csv_uploads_live.py  test_dashboard_live.py  test_mapping_templates_live.py  test_quarantine_live.py  test_readyz_live.py  test_stores_live.py
services/dis-ui-server/tests/unit/: test_api_prefix.py  test_auth.py  test_config.py  test_cors.py  test_csv_received_envelope.py  test_csv_uploads.py  test_dashboard_unit.py  test_error_envelope.py  test_fallback_matcher.py  test_field_catalog.py  test_health.py  test_mapping_suggestions.py  test_mapping_templates_unit.py  test_mapping_validation.py  test_publisher_modes.py  test_quarantine.py  test_template_types_endpoint.py  test_tenant_source.py  test_tier0.py  test_two_guc_auth.py  test_upload_stream.py  test_upload_stream_asgi.py
services/mirror-sync-consumer/: CLAUDE.md  README.md  pyproject.toml
services/mirror-sync-consumer/src/mirror_sync_consumer/: __init__.py  config.py
services/mirror-sync-consumer/tests/integration/: conftest.py  test_db_pull.py  test_fail_loud.py
services/mirror-sync-consumer/tests/unit/: test_audit_log_only.py  test_config.py  test_mapping.py  test_reader_guards.py  test_runner_branches.py  test_sink_counts.py
services/streaming-consumer/: CLAUDE.md  README.md  pyproject.toml
services/streaming-consumer/src/streaming_consumer/: __init__.py  config.py  envelope.py  health.py  main.py  orchestrate.py
services/streaming-consumer/tests/integration/: conftest.py  test_audit.py  test_catalogue_write.py  test_concurrent_upsert.py  test_dual_write.py  (+9 more)
(+538 files in other folders)
