[project]
name = "ithina-dis"
version = "0.0.0"
description = "DIS — Data Integration System for the Ithina Data Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # HTTP services / clients
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",

  # Postgres
  "sqlalchemy[asyncio]>=2.0.36",
  "psycopg[binary]>=3.2",
  "alembic>=1.14",

  # Validation engine (decisions.md D4a)
  "pandera[polars]>=0.20",
  "polars>=1.0",
  "pyarrow>=17",

  # CSV / SQL preview (decisions.md D16)
  "duckdb>=1.0",

  # GCP clients
  "google-cloud-pubsub>=2.23",
  "google-cloud-storage>=2.18",
  "google-cloud-bigquery>=3.25",
  "google-cloud-kms>=3.1",
  "google-cloud-secret-manager>=2.20",
  "google-cloud-logging>=3.10",

  # Auth (Customer Master JWT verification)
  "pyjwt[crypto]>=2.8",

  # Pydantic + config
  "pydantic[email]>=2.9",
  "pydantic-settings>=2.6",

  # BigQuery models (decisions.md D23)
  "dbt-bigquery>=1.8,<1.10",

  # IDs (UUIDv7)
  "uuid-utils>=0.9",

  # Retry / reliability
  "tenacity>=9",

  # Fast JSON
  "orjson>=3.10",

  # Tracing (trace_id propagation per architecture.md)
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-gcp-trace>=1.7",

  # Structured logging (matches Customer Master)
  "python-json-logger>=2.0,<4.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.13",
  "faker>=30",
  "pyyaml>=6.0",
  "types-pyyaml",
  "jsonschema>=4.23",

  # Workspace members. The root is a virtual project (package = false), so members
  # are not installed unless something in a synced group depends on them. Listing
  # them in the default dev group means `uv sync` / `uv run` install them editable.
  "dis-core",
  "dis-testing",
  "dis-canonical",
  "dis-rls",
  "dis-pii",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "TID"]

[tool.ruff.lint.isort]
# First-party DIS packages so imports group as stdlib / third-party / first-party
# (root CLAUDE.md import convention).
known-first-party = [
  "dis_core",
  "dis_testing",
  "dis_audit",
  "dis_canonical",
  "dis_mapping",
  "dis_pii",
  "dis_rls",
  "dis_storage",
  "dis_validation",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Unit tests live next to code (libs/<name>/tests); integration/e2e in repo-root tests/.
# importlib mode lets identically-named test files coexist across libs without
# __init__.py juggling.
testpaths = ["tests", "libs"]
addopts = "--import-mode=importlib"
markers = [
  "integration: requires the local docker-compose stack (Postgres + fakes + emulators)",
]

[tool.uv]
package = false

[tool.uv.workspace]
# Workspace members are declared here as they are built (root CLAUDE.md: "workspace
# members declared in root pyproject.toml once they exist"). Slice 3 adds dis-canonical;
# Slice 4 adds the three data-plane safety libs.
members = [
  "libs/dis-core",
  "libs/dis-testing",
  "libs/dis-canonical",
  "libs/dis-rls",
  "libs/dis-pii",
]

[tool.uv.sources]
# Workspace libs resolve from the workspace. dis-testing and dis-canonical both
# depend on dis-core; dis-canonical uses its identifier aliases. The Slice 4 data-plane
# libs each depend on dis-core (dis-pii on dis-core only — no dis-rls, no DB).
dis-core = { workspace = true }
dis-testing = { workspace = true }
dis-canonical = { workspace = true }
dis-rls = { workspace = true }
dis-pii = { workspace = true }
