[project]
name = "dis-core"
version = "0.0.0"
description = "DIS shared base types and primitives. Slice 2 footprint: identity client interface only."
requires-python = ">=3.12"
dependencies = [
  # Slice 2 footprint is identity/ only: Pydantic models + an httpx-based client.
  # ids.py / errors.py / logging.py are deliberately NOT here yet — they are Slice 3
  # deliverables (see docs/slices/slice-02-fakes-and-seeder.md plan, D-B split).
  "pydantic>=2.9",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dis_core"]
