[project]
name = "dis-core"
version = "0.0.0"
description = "DIS shared base types and primitives: errors, identifiers, IDs, trace_id, timestamps, logging, BqClient stub, identity client."
requires-python = ">=3.12"
dependencies = [
  # Identity client (Slice 2): Pydantic models + an httpx-based client.
  "pydantic>=2.9",
  "httpx>=0.27",

  # Slice 3 primitives.
  "uuid-utils>=0.9",              # UUIDv7 generation (ids.py)
  "python-json-logger>=2.0,<4.0", # structured JSON logging (logging.py)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dis_core"]
