[project]
name = "dis-pii"
version = "0.0.0"
description = "DIS PII detection + fail-loud gate over a caller-supplied source mapping. Pure functions, no DB and no crypto/network (root CLAUDE.md hard rule 2). Tokenizer / key-vault / backend are inert placeholder seams (Slice 4)."
requires-python = ">=3.12"
dependencies = [
  # DisError root + structured logging only. NO dis-rls, NO DB, NO crypto, NO network.
  "dis-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dis_pii"]
