[project]
name = "dis-quarantine"
version = "0.0.0"
description = "DIS quarantine record models + fail-loud Cloud SQL writer for quarantine.quarantined_chunks / quarantined_rows (Slice 11a direct-write path; the 11b topic/drainer path supersedes the call site, not this lib). Owns the failure_stage vocabulary and the audit-Stage mapping."
requires-python = ">=3.12"
dependencies = [
  # DisError root (QuarantineWriteError) + UTC timestamps + structured logging.
  "dis-core",
  # The write posture goes through the RLS-aware session (quarantine.* is FORCE-RLS).
  # dis-rls brings the target-safety guard and rls_session.
  "dis-rls",
  # The D78 correlation seam: Stage (mapped to failure_stage) and FailureCode
  # (the stable failure_reason vocabulary) are dis-audit's owned enums.
  "dis-audit",
  # Async engine + connection for the Cloud SQL writer (psycopg v3 async driver).
  "sqlalchemy[asyncio]>=2.0.36",
  "psycopg[binary]>=3.2",
  # The record models.
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dis_quarantine"]
