[project]
name = "dis-storage"
version = "0.0.0"
description = "DIS GCS access: the frozen canonical object-path scheme, V4 signed-URL issuance, and an emulator-honouring client wrapper. The only sanctioned GCS access path (root CLAUDE.md hard rule 9)."
requires-python = ">=3.12"
dependencies = [
  # DisError root + structured logging. The lib never mints trace_id (hard rule 4):
  # the caller supplies it, so no dis-core trace_id import on the path builder.
  "dis-core",
  # GCS client + V4 signed-URL generation; honours STORAGE_EMULATOR_HOST.
  "google-cloud-storage>=2.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dis_storage"]
