[project]
name = "dis-testing"
version = "0.0.0"
description = "DIS shared test fixtures, fakes, and the test fixture seeder. Test-only — never imported by production code."
requires-python = ">=3.12"
dependencies = [
  # Consumes the identity client interface (Protocol + models + HttpIdentityClient).
  "dis-core",

  # UUIDv7 for fixture IDs (used directly; no dis-core helper until Slice 3).
  "uuid-utils>=0.9",

  # Fakes are FastAPI apps; CM fake signs RS256 JWTs and publishes Pub/Sub.
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pyjwt[crypto]>=2.8",
  "google-cloud-pubsub>=2.23",
  "httpx>=0.27",

  # Seeder writes to the DIS Postgres; tests validate against frozen JSON schemas.
  "sqlalchemy[asyncio]>=2.0.36",
  "psycopg[binary]>=3.2",
  "jsonschema>=4.23",
]

[project.entry-points.pytest11]
# Auto-load the DIS test fixtures into any suite that has dis-testing installed.
dis_testing = "dis_testing.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dis_testing"]
