[project]
name = "streaming-consumer"
version = "0.0.0"
description = "DIS streaming consumer happy path (Slice 10, D30/D33/D38/D63/D64): consumes ingress.ready, fetches the bronze chunk via dis-storage, loads the active per-(tenant, source) mapping from config.source_mappings as a per-lookup side-input (D6), runs the pre-mapping source-shape suite, applies the dis-mapping four sub-stages, runs the post-mapping canonical-shape suite, stamps mapping_version_id (D22), and atomically dual-writes the hot upsert plus the matching event insert in one Cloud SQL transaction under the event's tenant. No quarantine publish (Slice 11), no replay (Slice 12), no Identity Service (Slice 13), no circuit breaker (D27)."
requires-python = ">=3.12"
dependencies = [
  # DisError root, UUIDv7 ids, trace_id read, timestamps, structured logging.
  "dis-core",
  # Canonical models: the dual-write targets and mapping_version_id NOT NULL (D22).
  "dis-canonical",
  # The canonical writes go through the RLS-aware session (hard rules 1 & 12).
  "dis-rls",
  # GCS object read + split_object_uri/parse_object_path (hard rule 9, D53).
  "dis-storage",
  # The pure four-sub-stage mapping engine (rename, normalize, cast, derive).
  "dis-mapping",
  # Pre-mapping source-shape + post-mapping canonical-shape suites + drift guard.
  "dis-validation",
  # Fire-and-forget audit to Cloud SQL audit.events (hard rule 11, D43/D44).
  "dis-audit",
  # Fail-loud quarantine writes to quarantine.* (the Slice 11a storm stopper).
  "dis-quarantine",
  # ingress.ready subscriber (emulator-guarded locally; cloud wiring deferred).
  "google-cloud-pubsub>=2.23",
  # Async engine + connection for the dual-write (psycopg v3 async).
  "sqlalchemy[asyncio]>=2.0.36",
  "psycopg[binary]>=3.2",
  # Typed envelope model (ingress.ready in; this service publishes nothing).
  "pydantic>=2.9",
  # Chunk frame + the engine/suite interchange dtype layer (slice-05 stack).
  "polars>=1.41,<2.0",
  # JSONB payload serialisation (house JSON backend).
  "orjson>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streaming_consumer"]
